--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ os: trusty
 cache: false
 env:
 - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
+include:
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_fd607b41397e_key -iv $encrypted_fd607b41397e_iv
   -in assets/server.key.enc -out assets/server.key -d
@@ -19,6 +21,7 @@ before_install:
 - sfdx plugins --core
 - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key
   --username $USERNAME --setdefaultdevhubusername -a HubOrg
+
 script:
 - sfdx force:org:create -v HubOrg -s -f config/project-scratch-def.json -a ciorg --wait
   2
@@ -27,6 +30,22 @@ script:
 - sfdx force:apex:test:run -u ciorg --classnames mytest --wait 10
 - sfdx force:org:delete -u ciorg -p
 
+before_install:
+- openssl aes-256-cbc -K $encrypted_fd607b41397e_key -iv $encrypted_fd607b41397e_iv
+  -in assets/server.key.enc -out assets/server.key -d
+- export SFDX_AUTOUPDATE_DISABLE=false
+- export SFDX_USE_GENERIC_UNIX_KEYCHAIN=true
+- export SFDX_DOMAIN_RETRY=300
+- export SFDX_DISABLE_APP_HUB=true
+- export SFDX_LOG_LEVEL=DEBUG
+- mkdir sfdx
+- wget -qO- $URL | tar xJ -C sfdx --strip-components 1
+- "./sfdx/install"
+- export PATH=./sfdx/$(pwd):$PATH
+- sfdx --version
+- sfdx plugins --core
+- sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key
+  --username $USERNAME --setdefaultdevhubusername -a HubOrg
 script:
 - sfdx force:org:create -v HubOrg2 -s -f config/project-scratch-def.json -a ciorg2 --wait
   2
